[package]
name = "symatem"
version = "0.1.0"
authors = ["Alexander Meißner <AlexanderMeissner@gmx.net>"]
description = "Symatem graph database backend"
repository = "https://github.com/Symatem/SymatemRust"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
